# prismo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml  tests.yml
benchmarks/: test_performance.py
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/api/: analysis.md  backends.md  boundaries.md  geometry.md  index.md  io.md  materials.md  modes.md  monitors.md  optimization.md  sources.md
docs/source/developer/: architecture.md  benchmarks.md  contributing.md  index.md  releasing.md  testing.md
docs/source/examples/: index.md
docs/source/tutorials/: basic_simulation.md  index.md  optimization.md  sparameters.md  waveguide_coupling.md
docs/source/user_guide/: advanced.md  boundaries.md  data_export.md  gpu_acceleration.md  index.md  installation.md  materials.md  mode_analysis.md  mode_ports.md  quickstart.md  simulations.md  sources_monitors.md  validation.md  visualization.md
examples/: advanced_features_demo.py  basic_waveguide.py  complete_workflow_example.py  metal_backend_demo.py  mode_port_demo.py  plane_wave_validation.py  tfsf_plane_wave.py  verify_installation.py
scripts/: build_package.sh
src/prismo/: __init__.py  cli.py
src/prismo/analysis/: __init__.py  sparameters.py
src/prismo/backends/: __init__.py  backend_manager.py  base.py  cuda_kernels.py  cupy_backend.py  metal_backend.py  metal_kernels.py  numpy_backend.py
src/prismo/boundaries/: __init__.py  magnetic_pml.py  mode_port.py  pmc.py  pml.py
src/prismo/core/: __init__.py  fields.py  grid.py  simulation.py  solver.py
src/prismo/geometry/: __init__.py  shapes.py
src/prismo/gui/: __init__.py  main_window.py  material_viewer.py  property_plotter.py
src/prismo/io/: __init__.py
src/prismo/io/exporters/: __init__.py  base.py  csv_exporter.py  parquet_exporter.py
src/prismo/io/lumerical/: __init__.py  fsp_parser.py  material_db.py
src/prismo/materials/: __init__.py  ade.py  dispersion.py  library.py  tensor.py
src/prismo/modes/: __init__.py  solver.py
src/prismo/monitors/: __init__.py  base.py  dft.py  field.py  flux.py  mode_monitor.py
src/prismo/optimization/: __init__.py  sweep.py
src/prismo/solvers/: __init__.py  base.py  fem_solver.py  meep_solver.py
src/prismo/sources/: __init__.py  base.py  gaussian.py  mode.py  plane_wave.py  point.py  tfsf.py  waveform.py
src/prismo/utils/: __init__.py  mode_matching.py
src/prismo/visualization/: __init__.py
tests/: test_backends.py  test_core.py  test_core_fields.py  test_core_grid.py  test_core_solver.py  test_end_to_end.py  test_materials.py  test_metal_backend.py  test_monitors.py  test_monitors_advanced.py  test_simulation.py  test_sources.py
tests/validation/: test_dispersive_materials.py  test_mode_ports.py  test_mode_solver.py  test_plane_wave_validation.py  test_sparameters.py
